--- a/Backend/Mapa.html
+++ b/Backend/Mapa.html
@@ -68,18 +68,18 @@
         var markers = [
 
 
-            { "location": [10.564153119829141, -71.62190056577212], "popup": "Univans San Francisco Urbanización - Centro <br><b>Parada Inicial", "route": "routes/urbsfco.json", "iconUrl": "/images/busstop.png", "sector": "Urbanización San Francisco" },
-            { "location": [10.643431281308018, -71.61365267170406], "popup": "Univans San Francisco Urbanización - Centro <br><b>Parada Final", "route": "routes/urbsfco.json", "iconUrl": "/images/busstop.png", "sector": "Urbanización San Francisco" },
-            { "location": [10.516818513636702, -71.64126431554793], "popup": "Univans San Francisco El Bajo - Centro <br><b>Parada Inicial", "route": "routes/elbajo.json", "iconUrl": "/images/carstop.png", "sector": "El Bajo" },
-            { "location": [10.638674143732851, -71.61923753416234], "popup": "Univans San Francisco El Bajo - Centro <br><b>Parada Final", "route": "routes/elbajo.json", "iconUrl": "/images/carstop.png", "sector": "El Bajo" },
-            { "location": [10.523174789926458, -71.68487510490905], "popup": "Soler Circunvalación 1 - Centro <br><b>Parada Inicial", "route": "routes/soler_a.json", "iconUrl": "/images/busstop.png", "sector": "El Soler" },
-            { "location": [10.638838797896497, -71.6098695348075], "popup": "Soler Circunvalación 1 - Centro <br><b>Parada Final", "route": "routes/soler_a.json", "iconUrl": "/images/busstop.png", "sector": "El Soler" },
-            { "location": [10.534763496633147, -71.67757042630078], "popup": "Soler Los Haticos - Centro <br><b>Parada Inicial", "route": "routes/soler_b.json", "iconUrl": "/images/busstop.png", "sector": "El Soler" },
-            { "location": [10.638645592723734, -71.60940319339285], "popup": "Soler Los Haticos - Centro <br><b>Parada Final", "route": "routes/soler_b.json", "iconUrl": "/images/busstop.png", "sector": "El Soler" },
-            { "location": [10.549690043025251, -71.66926192193759], "popup": "Carabobo Circunvalación 1 - Centro <br><b>Parada Inicial", "route": "routes/carabobo_b.json", "iconUrl": "/images/busstop.png", "sector": "Carabobo" },
-            { "location": [10.638939779523554, -71.60655376294034], "popup": "Carabobo Circunvalación 1 - Centro <br><b>Parada Final", "route": "routes/carabobo_b.json", "iconUrl": "/images/busstop.png", "sector": "Carabobo" },
-            { "location": [10.548141067885311, -71.67454116205913], "popup": "Carabobo Los Haticos - Centro <br><b>Parada Inicial", "route": "routes/carabobo_a.json", "iconUrl": "/images/busstop.png", "sector": "Carabobo" },
-            { "location": [10.638745874267812, -71.60675051701867], "popup": "Carabobo los Haticos - Centro <br><b>Parada Final", "route": "routes/carabobo_a.json", "iconUrl": "/images/busstop.png", "sector": "Carabobo" },
+            { "location": [10.564153119829141, -71.62190056577212], "popup": "Univans San Francisco Urbanización - Centro <br><b>Parada Inicial", "route": "routes/urbsfco.json", "iconUrl": "../images/busstop.png", "sector": "Urbanización San Francisco" },
+            { "location": [10.643431281308018, -71.61365267170406], "popup": "Univans San Francisco Urbanización - Centro <br><b>Parada Final", "route": "routes/urbsfco.json", "iconUrl": "../images/busstop.png", "sector": "Urbanización San Francisco" },
+            { "location": [10.516818513636702, -71.64126431554793], "popup": "Univans San Francisco El Bajo - Centro <br><b>Parada Inicial", "route": "routes/elbajo.json", "iconUrl": "../images/carstop.png", "sector": "El Bajo" },
+            { "location": [10.638674143732851, -71.61923753416234], "popup": "Univans San Francisco El Bajo - Centro <br><b>Parada Final", "route": "routes/elbajo.json", "iconUrl": "../images/carstop.png", "sector": "El Bajo" },
+            { "location": [10.523174789926458, -71.68487510490905], "popup": "Soler Circunvalación 1 - Centro <br><b>Parada Inicial", "route": "routes/soler_a.json", "iconUrl": "../images/busstop.png", "sector": "El Soler" },
+            { "location": [10.638838797896497, -71.6098695348075], "popup": "Soler Circunvalación 1 - Centro <br><b>Parada Final", "route": "routes/soler_a.json", "iconUrl": "../images/busstop.png", "sector": "El Soler" },
+            { "location": [10.534763496633147, -71.67757042630078], "popup": "Soler Los Haticos - Centro <br><b>Parada Inicial", "route": "routes/soler_b.json", "iconUrl": "../images/busstop.png", "sector": "El Soler" },
+            { "location": [10.638645592723734, -71.60940319339285], "popup": "Soler Los Haticos - Centro <br><b>Parada Final", "route": "routes/soler_b.json", "iconUrl": "../images/busstop.png", "sector": "El Soler" },
+            { "location": [10.549690043025251, -71.66926192193759], "popup": "Carabobo Circunvalación 1 - Centro <br><b>Parada Inicial", "route": "routes/carabobo_b.json", "iconUrl": "../images/busstop.png", "sector": "Carabobo" },
+            { "location": [10.638939779523554, -71.60655376294034], "popup": "Carabobo Circunvalación 1 - Centro <br><b>Parada Final", "route": "routes/carabobo_b.json", "iconUrl": "../images/busstop.png", "sector": "Carabobo" },
+            { "location": [10.548141067885311, -71.67454116205913], "popup": "Carabobo Los Haticos - Centro <br><b>Parada Inicial", "route": "routes/carabobo_a.json", "iconUrl": "../images/busstop.png", "sector": "Carabobo" },
+            { "location": [10.638745874267812, -71.60675051701867], "popup": "Carabobo los Haticos - Centro <br><b>Parada Final", "route": "routes/carabobo_a.json", "iconUrl": "../images/busstop.png", "sector": "Carabobo" },
             
 
         ];
