--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 					<h1>Localiza tu Transporte en San Francisco</h1>
 					<h3>¿Perdido en San Francisco? ¡GeoTransitSF tiene la solución para ti!</h3>
 					<br clear="all" />
-					<a href="/Backend/Mapa.html" class="btn">
+					<a href="https://danielleon55.github.io/geotransit.github.io/Backend/Mapa.html" class="btn">
 						Entrar <span class="fa-solid fa-angle-right"></span>
 					</a>
 				</div>
